deploy/prod-ovh/traefik-middleware-ssl-redirect.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-ssl
spec:
  redirectScheme:
    scheme: https
    permanent: true
