deploy/prod-ovh/deploy-peertube.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peertube
  labels:
    app: peertube
    component: web
    app.kubernetes.io/name: peertube
    app.kubernetes.io/instance: peertube
spec:
  selector:
    matchLabels:
      app: peertube
      component: web
  template:
    metadata:
      labels:
        app: peertube
        component: web
        app.kubernetes.io/name: peertube
        app.kubernetes.io/instance: peertube
    spec:
      serviceAccountName: peertube
      securityContext:
        fsGroup: 999
      containers:
      - name: peertube
        image: chocobozzz/peertube:production-bookworm
        imagePullPolicy: Always
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 999
        ports:
        - containerPort: 9000
          name: http
          protocol: TCP
        volumeMounts:
          - name: data
            mountPath: /data
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 10
          periodSeconds: 10
        resources:
          requests:
            memory: "32Mi"
            cpu: "250m"
          limits:
            memory: "8000Mi"
            cpu: "2000m"
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: peertube-data
