deploy/prod-ovh/statefulset-gitea.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitea
  labels:
    app: gitea
    component: web
    app.kubernetes.io/name: gitea
    app.kubernetes.io/instance: gitea
spec:
  serviceName: gitea
  selector:
    matchLabels:
      app: gitea
      component: web
  template:
    metadata:
      labels:
        app: gitea
        component: web
        app.kubernetes.io/name: gitea
        app.kubernetes.io/instance: gitea
      annotations:
        prometheus.io/port: "3000"
        prometheus.io/scrape: "true"
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
      containers:
      - name: gitea
        image: gitea/gitea:1.23.7-rootless
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          protocol: TCP
          containerPort: 3000
        - name: ssh
          protocol: TCP
          containerPort: 2222
        volumeMounts:
        - mountPath: /tmp
          name: temp
        - mountPath: /data/gitea/conf/app.ini
          subPath: config.ini
          name: config
        - mountPath: /data
          name: data
        resources:
          requests:
            memory: 256Mi
            cpu: 100m
          limits:
            memory: 1024Mi
            cpu: 1500m
        livenessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 30
          successThreshold: 1
          failureThreshold: 10
          periodSeconds: 10
          timeoutSeconds: 1
        securityContext:
          privileged: false
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
      volumes:
      - name: temp
        emptyDir: {}
      - name: config
        secret:
          secretName: gitea-config
      - name: scripts
        configMap:
          name: gitea-scripts
          defaultMode: 0700
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
