deploy/prod-ovh/svc-db.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/tailnet-fqdn: db.tail6afe.ts.net
  name: db
spec:
  externalName: ts-prod-db-pkllg.tailscale.svc.cluster.local
  type: ExternalName
