deploy/prod-ovh/svc-owncast.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: owncast
    app.kubernetes.io/instance: owncast
    app.kubernetes.io/name: owncast
  name: owncast
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: owncast
    app.kubernetes.io/name: owncast
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: owncast
    app.kubernetes.io/instance: owncast
    app.kubernetes.io/name: owncast-rtmp
  name: owncast-rtmp
spec:
  ports:
  - name: rtmp
    port: 1935
    protocol: TCP
    targetPort: 1935
    nodePort: 31935
  selector:
    app.kubernetes.io/instance: owncast
    app.kubernetes.io/name: owncast
  type: NodePort
