deploy/prod-ovh/svc-peertube.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: peertube
    app.kubernetes.io/instance: peertube
    app.kubernetes.io/name: peertube
  name: peertube
spec:
  ports:
  - name: http
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app.kubernetes.io/instance: peertube
    app.kubernetes.io/name: peertube
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: peertube-rtmp
    app.kubernetes.io/instance: peertube
    app.kubernetes.io/name: peertube-rtmp
  name: peertube-rtmp
spec:
  ports:
  - name: rtmp
    port: 1935
    protocol: TCP
    targetPort: 1935
    nodePort: 31937
  selector:
    app.kubernetes.io/instance: peertube
    app.kubernetes.io/name: peertube
  type: NodePort
