deploy/prod-ovh/svc-robots-txt.yaml
apiVersion: v1
kind: Service
metadata:
  name: robots-txt
spec:
  selector: 
    app: robots-txt
  ports:
  - port: 80
    targetPort: 80
