deploy/prod-ovh/svc-valkey.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: valkey
    app.kubernetes.io/instance: valkey
    app.kubernetes.io/name: valkey
  name: valkey
spec:
  ports:
  - name: http
    port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app.kubernetes.io/instance: valkey
    app.kubernetes.io/name: valkey
  type: ClusterIP
