deploy/prod-ovh/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-prod-redirect-ssl@kubernetescrd

spec:
  rules:
  - host: k3s.netflux.io
    http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: whoami
            port:
              number: 5678
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netflux-homepage
            port:
              name: http
  - host: grafana.netflux.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              name: service
  - host: git.netflux.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitea
            port:
              name: http
  - host: caldav.netflux.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radicale
            port:
              name: caldav
  - host: solar-gateway.netflux.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: solar-toolkit-gateway
            port:
              name: http
  tls:
    - hosts:
      - k3s.netflux.io
      - grafana.netflux.io
      - git.netflux.io
      - caldav.netflux.io
      - solar-gateway
      secretName: prod-ingress-tls
