deploy/prod-ovh/traefik-ingress-route-gitea-ssh.yaml
# Traefik ingress route for routing TCP traffic to gitea service.
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: gitea-ssh
spec:
  entryPoints:
    - ssh
  routes:
    - match: HostSNI(`*`)
      services:
        - name: prod-gitea
          namespace: default
          port: 22
